Fix tacky scrollbar in middle of page. Issues: - Library is rendering above "Now Playing" box. z-index only useful when all   elements are absolutely positioned.  Mine more CSS-foo. - If you resize the window so that it is smaller than the background fadeout   div, it causes the BODY to overflow!  I've patched this by setting overflow   hidden, but pressing page-down in firefox still exposes it!  We require more   CSS-foo. - h1 is smaller than h2?  Hrm.

--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -5,6 +5,7 @@ body
   color: #fff
   font-size: 0.75em
   font-family: "Lucida Grande","Lucida Sans","Luxi Sans","Trebuchet MS","Bitstream Vera Sans",helvetica,verdana,arial,sans-serif
+  overflow: hidden
 
 a
   color: white
@@ -113,7 +114,11 @@ h1
   clear: both
 
 #artistlist
-  height: 300px
+  margin-left: 16px
+  margin-top:  100px
+
+#library
+  width: 50%
   overflow-y: scroll
   position: absolute
   top: 0
@@ -121,9 +126,6 @@ h1
   width: 100%
   height: 100%
 
-#library
-  width: 50%
-  float: left
 
 #queue
   width: 50%
